@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        + choise : ChoiceBox<String>
        + pain : Pane
        + DrawInside()
        + Text()
        + clean()
        + initialize()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
    }
  }
  

  sample.Controller .up.|> javafx.fxml.Initializable
  sample.Controller o-- sample.Metods.Block : block
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
